# asc-daemon

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Taskfile.yml  build.rs  install.sh
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api.md  app-management.md  backups.md  console.md  database.md  mcp-server.md  monitoring.md  package-manager.md  scheduler.md  sftp.md  updater.md
docs/english/: CODE_OF_CONDUCT.md  README.md  api.md  app-management.md  backups.md  console.md  database.md  mcp-server.md  monitoring.md  package-manager.md  scheduler.md  sftp.md  updater.md
docs/russian/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  api.md  app-management.md  backups.md  console.md  database.md  mcp-server.md  monitoring.md  overview.md  package-manager.md  root.md  scheduler.md  sftp.md  updater.md
proto/asc/daemon/v1/: daemon.proto
skills/: README.md
skills/asc-app-packaging/: SKILL.md
skills/asc-server-management/: SKILL.md
src/: lib.rs
src/cli/: main.rs
src/daemon/: client.rs  docker.rs  http.rs  logging.rs  mod.rs  progress.rs
src/daemon/api/: console.rs  grpc.rs  mod.rs  proto.rs  rest.rs  uds.rs  ws.rs
src/daemon/apps/: disk.rs  docker.rs  driver.rs  meta.rs  mod.rs  ports.rs  process.rs  store.rs  systemd.rs
src/daemon/backup/: glob.rs  mod.rs  storage.rs
src/daemon/config/: mod.rs
src/daemon/console/: hub.rs  mod.rs
src/daemon/i18n/: mod.rs
src/daemon/monitor/: mod.rs  system.rs
src/daemon/pkg/: auth.rs  clone.rs  gitref.rs  install.rs  manifest.rs  mod.rs  refresh.rs  registry.rs  settings.rs  sources.rs  upgrade.rs
src/daemon/scheduler/: mod.rs
src/daemon/server/: mod.rs
src/daemon/service/: mod.rs  systemd.rs
src/updater/: github.rs  installer.rs  main.rs
tests/: ambiguous.rs  api.rs  clone.rs  console_ws.rs  docker_api.rs  install.rs  install_git.rs  stack_install.rs  uds_api.rs
