# 🦀 asc-daemon — AdminService.Cloud daemon, CLI (asc) and updater (asc-updater)
[package]
name = "asc-daemon"
version = "0.0.3"
edition = "2024"
license = "MIT"
authors = ["Omar El Sayed (@statebyte)"]
repository = "https://github.com/AdminServiceCloud/asc-daemon"
description = "Open source daemon & CLI for server management: apps (Docker & native), package manager, backups, monitoring, MCP server for AI"

[lib]
name = "asc_daemon"
path = "src/lib.rs"

[[bin]]
name = "asc"
path = "src/cli/main.rs"

[[bin]]
name = "asc-updater"
path = "src/updater/main.rs"

[dependencies]
anyhow = "1"
# Docker Engine API over the unix socket (no TLS stack: default features off
# keeps ring/openssl out, preserving pure-Rust cross-compilation).
bollard = { version = "0.21", default-features = false, features = ["pipe"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures-util = "0.3"
prost = "0.14"
sha2 = "0.11"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time", "process", "io-util", "io-std"] }
toml = "1.1"
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-prost = "0.14.6"

[build-dependencies]
# protox компилирует .proto без внешнего protoc — сборка герметична
protox = "0.9"
tonic-build = "0.14"
tonic-prost-build = "0.14.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
