# —Ä—ü¬¶–Ç asc-daemon –≤–Ç‚Äù AdminService.Cloud daemon, CLI (asc) and updater (asc-updater)
[package]
name = "asc-daemon"
version = "0.3.6"
edition = "2024"
license = "MIT"
authors = ["Omar El Sayed (@statebyte)"]
repository = "https://github.com/AdminServiceCloud/asc-daemon"
description = "Open source daemon & CLI for server management: apps (Docker & native), package manager, backups, monitoring, MCP server for AI"

[lib]
name = "asc_daemon"
path = "src/lib.rs"

[[bin]]
name = "asc"
path = "src/cli/main.rs"

[[bin]]
name = "asc-updater"
path = "src/updater/main.rs"

[dependencies]
anyhow = "1"
# Docker Engine API over the unix socket (no TLS stack: default features off
# keeps ring/openssl out, preserving pure-Rust cross-compilation).
# `buildkit_providerless` is the local-image-build session client (DMN-050):
# without it, `BuildInfo.aux` only deserializes the legacy builder's shape,
# and the Engine's BuildKit-compat translation sends other progress lines as
# an untyped protobuf blob there instead ‚Äî aborting the whole build stream.
# It pulls in `rustls` transitively (`ssl_providerless`), but with no crypto
# provider selected (bollard's own rustls dep has default-features off) and
# unreachable here (we only ever `connect_with_unix`), so it stays inert.
# `time` is its own hard requirement for the session's OAuth code path.
bollard = { version = "0.21", default-features = false, features = ["pipe", "buildkit_providerless", "time"] }
# Tar build context bytes for the Docker image build (DMN-050) into a bollard body.
bytes = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures-util = "0.3"
prost = "0.14"
sha2 = "0.11"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = { version = "0.8", features = ["ws"] }
# CLI ‚Üí daemon client over the local unix socket (DMN-042): a minimal
# HTTP/1 JSON client ‚Äî one connection per request, no TLS, no pooling.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time", "process", "io-util", "io-std"] }
toml = "1.1"
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-prost = "0.14.6"
# Docker pull / git clone progress bars (tty-gated, see src/daemon/progress.rs).
indicatif = "0.18.6"

[build-dependencies]
# protox –Ý—î–Ý—ï–Ý—ò–Ý—ó–Ý—ë–Ý¬ª–Ý—ë–°–Ç–°—ì–Ý¬µ–°‚Äö .proto –Ý¬±–Ý¬µ–Ý¬∑ –Ý–Ü–Ý–Ö–Ý¬µ–°‚Ç¨–Ý–Ö–Ý¬µ–Ý—ñ–Ý—ï protoc –≤–Ç‚Äù –°–É–Ý¬±–Ý—ï–°–Ç–Ý—î–Ý¬∞ –Ý—ñ–Ý¬µ–°–Ç–Ý—ò–Ý¬µ–°‚Äö–Ý—ë–°‚Ä°–Ý–Ö–Ý¬∞
protox = "0.9"
tonic-build = "0.14"
tonic-prost-build = "0.14.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.30"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
